--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -28,3 +28,17 @@ body {
   transition-timing-function: cubic-bezier(0.07, 1.18, 1, 1);
   z-index: 30;
 }
+
+
+.animation-container {
+  width: max-content;
+  max-width: 100px;
+}
+
+#hexagon {
+  width: 100%;
+  height: 100%;
+  display: block;
+  margin: 0 auto;
+  fill: none;
+}
